--- a/web/src/components/diary-header/index.marko
+++ b/web/src/components/diary-header/index.marko
@@ -6,6 +6,15 @@ class {
   }
 }
 
+<style>
+    header {
+       font-size: 30px;
+       text-align: center;
+       margin: 50px auto 0px auto;
+       font-weight: 300;
+    }
+</style>
+
 <header>
   <h1>${input.title}</h1>
 </header>
