--- a/web/src/components/diary-main/index.marko
+++ b/web/src/components/diary-main/index.marko
@@ -49,7 +49,6 @@ class {
     }
 }
 
-<style>@import url("style.css")</style>
 
 <div class="main">
 <ul>
@@ -67,7 +66,7 @@ class {
                 </button>
             </if>
             <else>
-                <a href=`http://localhost:8080/diaries/${diary.id}/tasks`>
+                <a href="../../pages/detail">
                   ${diary.title}
                 </a>
                 ${' '}
