--- a/web/src/pages/index.marko
+++ b/web/src/pages/index.marko
@@ -1,14 +1,16 @@
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width-device-width, initial-scale=1.0">
   <title>MyDiary</title>
 </head>
 
 <body>
   <diary-header title="MY DIARY"/>
   <diary-main />
+  <a href="./test/test.html">html</a>
+  <a href="/detail">html</a>
 </body>
 
 </html>
